Add html and css for new tweet posts

--- a/public/index.html
+++ b/public/index.html
@@ -35,15 +35,15 @@
       </span>
     </nav>
 
-    <header>
+    <header id="main-header">
       <div id="img-wrapper">
-          <img src="/images/profile-hex.png"> 
+        <img src="/images/profile-hex.png"> 
       </div>
       <br>
       <div id="name-wrapper">
-          <h2>elo</h2>
+        <h2>elo</h2>
       </div>
-  </header>
+    </header>
 
     <!-- Page-specific (main) content here -->
     <main class="container">
@@ -58,6 +58,27 @@
           </div>
         </form>
       </section>
+
+      <section class="tweet-container">
+        <article>
+          <header>
+            <i class="fa-solid fa-user"></i>
+            <h1>Newton</h1>
+          </header>
+          <div id="tweet-body">
+            <h2>tweet-text</h2>
+          </div>
+          <footer>
+            <h3>footer</h3>
+            <span>
+              <i class="fa-solid fa-flag fa-2xs"></i>
+              <i class="fa-solid fa-retweet fa-2xs"></i>
+              <i class="fa-solid fa-heart fa-2xs"></i>
+            </span>
+          </footer>
+        </article>
+      </section>
+
     </main>
   </body>
 </html>
