Make functions that populate tweet html markdown from tweet objects

--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,7 @@
 
     <!-- External JS -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/timeago.js/4.0.2/timeago.min.js" integrity="sha512-SVDh1zH5N9ChofSlNAK43lcNS7lWze6DTVx1JCXH1Tmno+0/1jMpdbR8YDgDUfcUrPp1xyE53G42GFrcM0CMVg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
     <!-- App JS -->
     <script type="text/javascript" src="/scripts/client.js"></script>
@@ -59,25 +60,7 @@
         </form>
       </section>
 
-      <section class="tweet-container">
-        <article>
-          <header>
-            <i class="fa-solid fa-user"></i>
-            <h1>Newton</h1>
-          </header>
-          <div id="tweet-body">
-            <h2>tweet-text</h2>
-          </div>
-          <footer>
-            <h3>footer</h3>
-            <span>
-              <i class="fa-solid fa-flag fa-2xs"></i>
-              <i class="fa-solid fa-retweet fa-2xs"></i>
-              <i class="fa-solid fa-heart fa-2xs"></i>
-            </span>
-          </footer>
-        </article>
-      </section>
+      <section class="tweet-container"></section>
 
     </main>
   </body>
