Add a styled error message that only appears on error

--- a/public/index.html
+++ b/public/index.html
@@ -49,6 +49,11 @@
     <!-- Page-specific (main) content here -->
     <main class="container">
       <section class="new-tweet">
+        <div id="error-block">
+          <i class="fa-solid fa-triangle-exclamation" id="tri1"></i>
+          <h4>Error: this is an error</h4>
+          <i class="fa-solid fa-triangle-exclamation" id="tri2"></i>
+        </div>
         <h2>Compose Tweet</h2>
         <form id="tweet-form" action="/tweets/" method="post">
           <label for="tweet-text">What are you humming about?</label>
