Add @media queries to change the body's flex direction

--- a/public/index.html
+++ b/public/index.html
@@ -54,7 +54,7 @@
           <h4></h4>
           <i class="fa-solid fa-triangle-exclamation" id="tri2"></i>
         </div>
-        <h2>Compose Tweet</h2>
+        <!--<h2>Compose Tweet</h2>-->
         <form id="tweet-form" action="/tweets/" method="post">
           <label for="tweet-text">What are you humming about?</label>
           <textarea name="text" id="tweet-text"></textarea>
