Animate the 'write new tweet' arrow

--- a/public/index.html
+++ b/public/index.html
@@ -30,8 +30,8 @@
     <!-- Top nav bar (fixed) -->
     <nav>
       <span id="nav-text-logo">tweeter</span>
-      <span id="new-tweet">
-        <p>Write a new tweet</p>
+      <span id="new-tweet-prompt">
+        <p><strong>Write</strong> a new tweet</p>
         <i class="fa-solid fa-angles-down"></i>
       </span>
     </nav>
