Make textarea reset upon tweet submission and have character counter reset

--- a/public/index.html
+++ b/public/index.html
@@ -54,10 +54,9 @@
           <h4></h4>
           <i class="fa-solid fa-triangle-exclamation" id="tri2"></i>
         </div>
-        <!--<h2>Compose Tweet</h2>-->
         <form id="tweet-form" action="/tweets/" method="post">
-          <label for="tweet-text">What are you humming about?</label>
-          <textarea name="text" id="tweet-text"></textarea>
+          <label for="tweet-text"></label>
+          <textarea name="text" id="tweet-text" placeholder="What are you humming about?"></textarea>
           <div>
             <button type="submit">Tweet</button>
             <output name="counter" class="counter" for="tweet-text">140</output>
