Add a smaller fixed nav to the mobile view

--- a/public/index.html
+++ b/public/index.html
@@ -28,6 +28,7 @@
 
   <body>
     <!-- Top nav bar (fixed) -->
+    <div id="fixed-background"></div>
     <nav>
       <span id="nav-text-logo">tweeter</span>
       <span id="new-tweet-prompt">
